5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1649_2704.log
== TEST (2019-04-15 20:36:09) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:43:03) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
if (nota_aluno==bonificacao):
	mensagem(S)
else:
	mensagem(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem(N)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:44:07) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
if (nota_aluno==bonificacao):
	print(S)
else:
	print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(N)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:45:09) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
if (nota_aluno==bonificacao):
	print("S")
else:
	print("N")
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:45:34) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:45:44) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- EXECUTION TIME:
0.145026
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:48:37) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:48:47) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- EXECUTION TIME:
0.163656
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:49:37) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno+bonificacao
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:49:49) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno+bonificacao
if (nota_aluno==bonificacao):
	print("N")
else:
	print("S")
-- EXECUTION TIME:
0.200821
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:12:54) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno+bonificacao
if nota_aluno == bonificacao:
	print("N")
else:
	print("S")
-- EXECUTION TIME:
0.143835
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:13:04) 
-- CODE:
nota_aluno=float(input("digite a nota: "))
bonificacao = nota_aluno*10/100
nota_final = nota_aluno+bonificacao
if nota_aluno == bonificacao:
	print("N")
else:
	print("S")
-- EXECUTION TIME:
0.155919
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:36) 
-- CODE:
x=float(input("digite a nota: "))
opcao = input("S/N")
if (opcao.upper()) == "S":
	x = x + x*0.10
else:
	x = x
print(x)


	


-- EXECUTION TIME:
0.218602
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
